fix bug dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body{
 /* Estilos de modo Light-Dark*/
 .dark {
   background-color: black;
-  color: white;
+  color: rgb(60, 255, 0);
   border-radius: 10px;
 }
 
@@ -52,12 +52,16 @@ h1{
   height: 30px;
   border-radius: 15px;
   padding: 5px 10px;
-  color: rgb(0, 255, 0);
   font-weight: bold;
   border: 5px solid #022628;
   cursor: pointer;
   margin: 10px 10px;
   user-select: none;
+}
+
+button{
+  background-color: rgb(60, 255, 0);
+
 }
 
 p{
@@ -73,10 +77,15 @@ ul{
   width: 100%;
   height: 100%;
 }
+
+li{
+  background-color: rgb(60, 255, 0);
+  color: black;
+}
 .topping{
   font-size: 2rem;
   font-weight: bold;
-  color: black;
+  /* color: black; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -87,11 +96,11 @@ ul{
   cursor: pointer;
   user-select: none;
 }
-.fondo-marron{
+/* .fondo-marron{
   background-color: #aa5822;
 }
 .fondo-naranja{
   background-color: #ff7b0f;
 }
 
-
+ */
